# blog-rs

./: Cargo.toml  README.md
src/: main.rs
static/: styles.css
template/: head.hbs  index.hbs  layout.hbs  page.hbs
